// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchGroupTopic should match latest snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "query GroupTopic($groupSlug: String, $topicName: String) {
        groupTopic(groupSlug: $groupSlug, topicName: $topicName) {
          id
          postsTotal
          followersTotal
          topic {
            id
            name
          }
          group {
            id
          }
        }
      }",
    "variables": Object {
      "groupSlug": "goteam",
      "topicName": "petitions",
    },
  },
  "meta": Object {
    "extractModel": "GroupTopic",
  },
  "type": "FETCH_GROUP_TOPIC",
}
`;

exports[`fetchTopic should match latest snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "query Topic($name: String, $id: ID) {
        topic(name: $name, id: $id) {
          id
          name
          postsTotal
          followersTotal
        }
      }",
    "variables": Object {
      "id": undefined,
      "name": "petitions",
    },
  },
  "meta": Object {
    "extractModel": "Topic",
  },
  "type": "FETCH_TOPIC",
}
`;
